[package]
name = "codemp-intellij"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# codemp = { git = "ssh://git@github.com/codewithotherpeopleandchangenamelater/codemp.git", rev = "a2a841d8921871a0e254ff901458d038b5ee659f" }
codemp = { path = "../../../../codemp/", features = ["global", "sync"] }
jni = "0.21.1"

[lib]
crate_type = ["cdylib"]
